--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^1.9.158",
+    "gatsby-directus": "0.0.1",
+    "gatsby-image": "^1.0.35",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-react-helmet": "^2.0.3",
+    "gatsby-plugin-sharp": "^1.6.27",
+    "gatsby-transformer-remark": "^1.7.30",
+    "gatsby-transformer-sharp": "^1.6.18",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
