--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^1.9.158",
-    "gatsby-directus": "0.0.3",
+    "gatsby-directus": "0.0.5",
     "gatsby-image": "^1.0.35",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-react-helmet": "^2.0.3",
+    "gatsby-plugin-sass": "^1.0.16",
     "gatsby-plugin-sharp": "^1.6.27",
+    "gatsby-plugin-typography": "^1.7.13",
     "gatsby-transformer-remark": "^1.7.30",
     "gatsby-transformer-sharp": "^1.6.18",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "typography-theme-us-web-design-standards": "^0.16.9"
   },
   "keywords": [
     "gatsby"
