--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^1.9.158",
-    "gatsby-directus": "0.0.7",
+    "gatsby-directus": "0.0.8",
     "gatsby-image": "^1.0.35",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-sass": "^1.0.16",
     "gatsby-plugin-sharp": "^1.6.27",
     "gatsby-plugin-typography": "^1.7.13",
+    "gatsby-remark-prismjs": "^1.2.20",
     "gatsby-transformer-remark": "^1.7.30",
     "gatsby-transformer-sharp": "^1.6.18",
     "react-helmet": "^5.2.0",
